@@ -131,6 +131,14 @@
      {:name x}))
 
 #_{:clj-kondo/ignore [:missing-docstring]}
+(defn ^:no-doc span-opts*
+  [span-opts line file f-name]
+  (let [source-defaults (cond-> {:line line
+                                 :file file}
+                          f-name (assoc :fn f-name))]
+    (update (as-span-opts span-opts) :source #(into source-defaults %))))
+
+#_{:clj-kondo/ignore [:missing-docstring]}
 (defn ^:no-doc new-span!'
   ^Context [span-opts]
   (let [{:keys [^Tracer tracer name parent links attributes ^Thread thread source span-kind
@@ -196,11 +204,7 @@
    (qualified) name and map of attributes. All other options take default values
    shown above."
   [span-opts]
-  `(let [span-opts# (as-span-opts ~span-opts)
-         source#    (into {:line ~(:line (meta &form))
-                           :file ~*file*}
-                          (:source span-opts#))
-         span-opts# (assoc span-opts# :source source#)]
+  `(let [span-opts# (span-opts* ~span-opts ~(:line (meta &form)) ~*file* (util/fn-name))]
      (new-span!' span-opts#)))
 
 (defn- add-event-data!
@@ -384,11 +388,7 @@
    not use nor set the current context. `span-opts` is the same as for
    [[new-span!]]. See also [[with-span!]] and [[with-bound-span!]]."
   [[context span-opts] & body]
-  `(let [span-opts# (as-span-opts ~span-opts)
-         source#    (into {:line ~(:line (meta &form))
-                           :file ~*file*}
-                          (:source span-opts#))
-         span-opts# (assoc span-opts# :source source#)]
+  `(let [span-opts# (span-opts* ~span-opts ~(:line (meta &form)) ~*file* (util/fn-name))]
      (with-span-binding' [~context span-opts#]
        ~@body)))
 
@@ -401,11 +401,7 @@
    `span-opts` is the same as for [[new-span!]]. See also [[with-bound-span!]]
    and [[with-span-binding]]."
   [span-opts & body]
-  `(let [span-opts# (as-span-opts ~span-opts)
-         source#    (into {:line ~(:line (meta &form))
-                           :file ~*file*}
-                          (:source span-opts#))
-         span-opts# (assoc span-opts# :source source#)]
+  `(let [span-opts# (span-opts* ~span-opts ~(:line (meta &form)) ~*file* (util/fn-name))]
      (with-span-binding' [context# span-opts#]
        (context/with-context! context#
          ~@body))))
@@ -419,11 +415,7 @@
    not use nor set the current context. `span-opts` is the same as for
    [[new-span!]]. See also [[with-span!]] and [[with-span-binding]]."
   [span-opts & body]
-  `(let [span-opts# (as-span-opts ~span-opts)
-         source#    (into {:line ~(:line (meta &form))
-                           :file ~*file*}
-                          (:source span-opts#))
-         span-opts# (assoc span-opts# :source source#)]
+  `(let [span-opts# (span-opts* ~span-opts ~(:line (meta &form)) ~*file* (util/fn-name))]
      (with-span-binding' [context# span-opts#]
        (context/bind-context! context#
          ~@body))))
@@ -464,11 +456,7 @@
    `raise*` are callback functions to be used by `f`. All callback functions
    take a single argument, `raise` and `raise*` take a `Throwable` instance."
   [span-opts f respond raise]
-  `(let [span-opts# (as-span-opts ~span-opts)
-         source#    (into {:line ~(:line (meta &form))
-                           :file ~*file*}
-                          (:source span-opts#))
-         span-opts# (assoc span-opts# :source source#)]
+  `(let [span-opts# (span-opts* ~span-opts ~(:line (meta &form)) ~*file* (util/fn-name))]
      (async-span' span-opts# ~f ~respond ~raise)))
 
 #_{:clj-kondo/ignore [:missing-docstring]}
@@ -508,11 +496,7 @@
    callback functions to be used by `f`. All callback functions take a single
    argument, `raise` and `raise*` take a `Throwable` instance."
   [span-opts f respond raise]
-  `(let [span-opts# (as-span-opts ~span-opts)
-         source#    (into {:line ~(:line (meta &form))
-                           :file ~*file*}
-                          (:source span-opts#))
-         span-opts# (assoc span-opts# :source source#)]
+  `(let [span-opts# (span-opts* ~span-opts ~(:line (meta &form)) ~*file* (util/fn-name))]
      (async-bound-span' span-opts# ~f ~respond ~raise)))
 
 (defn span-interceptor
